--- a/maximeliron.com/Rules
+++ b/maximeliron.com/Rules
@@ -44,11 +44,12 @@ compile '*' do
       layout item[:layout] || 'default'
       # filter :relativize_paths, type: :html
     end
+    filter :cache_buster
   end
 end
 
 route '/stylesheets/*/' do
-  item.identifier.chop + '.css'
+  item.identifier.chop + fingerprint(item[:filename]) + '.css'
 end
 
 route '/javascripts/*' do
