--- a/maximeliron.com/Rules
+++ b/maximeliron.com/Rules
@@ -54,7 +54,7 @@ end
 
 route '/javascripts/*' do
   if !item.binary?
-    item.identifier.chop + '.js'
+    item.identifier.chop + fingerprint(item[:filename]) + '.js'
   end
 end
 
