--- a/ximus.xyz/Rules
+++ b/ximus.xyz/Rules
@@ -40,16 +40,17 @@ compile '*' do
       layout 'notes'
       # filter :relativize_paths, type: :html
     end
+    filter :cache_buster
   end
 end
 
 route '/stylesheets/*/' do
-  item.identifier.chop + '.css'
+  item.identifier.chop + fingerprint(item[:filename]) + '.css'
 end
 
 route '/javascripts/*' do
   if !item.binary?
-    item.identifier.chop + '.js'
+    item.identifier.chop + fingerprint(item[:filename]) + '.js'
   end
 end
 
