--- a/ximus.xyz/Gemfile
+++ b/ximus.xyz/Gemfile
@@ -3,6 +3,7 @@ source "https://rubygems.org"
 
 
 gem "rb-fsevent"
+gem "activesupport"
 gem "guard-nanoc"
 gem "nanoc"
 
@@ -17,5 +18,10 @@ gem "coffee-script"
 gem "autoprefixer-rails"
 gem "sprockets"
 gem "nokogiri"
+gem "oga"
 gem "erubis"
 gem "kramdown"
+gem "builder"
+gem "htmlbeautifier"
+
+gem "pry"
