--- a/maximeliron.com/content/resume/experience.yaml
+++ b/maximeliron.com/content/resume/experience.yaml
@@ -4,7 +4,7 @@ main:
     client_name: Rearden Commerce, Homerun.com
     client_url: http://www.deem.com/
     contact_with: VP of Analytics, Offers engineering team, Offers product team
-    description: "Core participation in a lean e-commerce engineering team (payments, analytics, email, both front-end and back-end). Learned to use data and analytics to drive decision making. Regularly participated in product development. Partner relationships with industry heavyweights."
+    description: "Core participation in a lean e-commerce engineering team (payments, analytics, email, front-end and back-end). Learned to use data and analytics to drive decision making. Regularly participated in product development. Partner relationships with industry heavyweights. Started as junior engineer but was promptly promoted."
     tools: "Ruby, Hadoop, Postfix, HTML/CSS, Javascript, Coffeescript, SASS"
     started_in: 03/2012
     finished_in: 09/2013
