--- a/maximeliron.com/content/resume/experience.yaml
+++ b/maximeliron.com/content/resume/experience.yaml
@@ -1,13 +1,21 @@
 main:
   -
+    title: Back-end Services Integration
+    client_name: Crosscall
+    client_url: http://crosscall.com/en/
+    contact_with: Engineering
+    description: "Created an internal app to bridge Zendesk, a 3rd party contractor and their internal support team."
+    tools: "Ruby, various web APIs"
+    date: 2014
+  -
     title: Senior Software Engineer
     client_name: Rearden Commerce, Homerun.com
     client_url: http://www.deem.com/
     contact_with: VP of Analytics, Offers engineering team, Offers product team
     description: "Core participation in a lean e-commerce engineering team (payments, analytics, email, front-end and back-end). Learned to use data and analytics to drive decision making. Regularly participated in product development. Partner relationships with industry heavyweights. Started as junior engineer but was promptly promoted."
     tools: "Ruby, Hadoop, Postfix, HTML/CSS, Javascript, Coffeescript, SASS"
-    started_in: 03/2012
-    finished_in: 09/2013
+    started_in: 2012
+    finished_in: 2013
   -
     title: Mobile Web App Design
     client_name: Blurt
@@ -23,16 +31,22 @@ main:
     contact_with: Head of communications
     description: Implemented a CO<sub>2</sub> module to enable visitors to measure their country's CO<sub>2</sub> footprint
     tools: "HTML/CSS, Javascript, RaphaelJS (SVG framework)"
-    started_in: 05/2011
-    finished_in: 06/2011
+    date: 2011
+  -
+    title: Data Visualization Design
+    client_name: Qualinetwork
+    client_url: http://www.qualinetwork.com/
+    contact_with: Founder and CEO
+    description: "Designed and implemented a visual graphs to visualize customer feedback for products sold through e-commerce"
+    tools: "HTML/CSS, Actionscript"
+    date: 2011
   -
     title: Web Application Design
     client_name: MD Architecture
     contact_with: CEO
     description: Designed and implemented a muti-user online file sharing platform for the construction of a large High School. The platform includes complex authorization and roles model, and basic email sharing capabilities.
     tools: "HTML/CSS, Ruby on Rails"
-    started_in: 05/2010
-    finished_in: 07/2010
+    date: 2011
   -
     title: Web Application Design
     client_name: Modenature (construction)
@@ -40,17 +54,7 @@ main:
     contact_with: CEO
     description: "A major learning experience. Built a collaborative web application to enable the sales team to work (much) more efficiently. Reception by users was great."
     tools: "Adobe Air, Flex (Actionscript framework), Ruby"
-    started_in: 07/2009
-    finished_in: 11/2009
-  -
-    title: Visual Design
-    client_name: Qualinetwork
-    client_url: http://www.qualinetwork.com/
-    contact_with: Founder and CEO
-    description: "Designed and implemented a visual graph to visualize customer feedback for products sold through e-commerce"
-    tools: "HTML/CSS, Actionscript"
-    started_in: 05/2011
-    finished_in: 06/2011
+    date: 2009
   -
     title: Web Design
     client_name: Scalr
@@ -73,8 +77,8 @@ main:
     contact_with: CEO
     description: My stepping stone into the web. Learned the basics of the web from some of the best (now working for Zynga). Participated in web design, branding, web strategy and e-commerce works.
     tools: "HTML/CSS, Javascript, PHP, Illustrator, Photoshop"
-    started_in: 09/2007
-    finished_in: 01/2008
+    started_in: 2007
+    finished_in: 2008
 
 various_sites:
   -
