--- a/maximeliron.com/Rules
+++ b/maximeliron.com/Rules
@@ -15,13 +15,13 @@ Sass.load_paths.concat(Compass.sass_engine_options[:load_paths])
 ExecJS.runtime = ExecJS::Runtimes::Node
 
 compile /stylesheets/ do
-  if !item.binary?
-    if item[:extension].end_with? 'css'
-      filter :sass
-      filter :autoprefix
-      filter :relativize_paths, type: :css
-    end
+  if item.identifier == "/stylesheets/resume.scss"
+    filter :postcss
+  else
+    filter :sass
+    filter :autoprefix
   end
+  filter :relativize_paths, type: :css
 end
 
 compile '/javascripts/main.*' do
