--- a/maximeliron.com/package.json
+++ b/maximeliron.com/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/postcss": "^4.0.8",
     "postcss": "^8.5.3",
     "postcss-cli": "^11.0.0",
+    "postcss-extend-rule": "^4.0.0",
     "postcss-load-config": "^6.0.1",
     "postcss-nested-vars": "^1.0.0",
     "postcss-scss": "^4.0.9",
